@@ -70,6 +70,10 @@
 #include "error.h"
 #include "cleanup.h"
 
+#ifdef SECURE_MAN_UID
+# include "security.h"
+#endif
+
 #include "manp.h"
 
 struct list {
@@ -140,9 +144,6 @@ static struct list *iterate_over_list (struct list *prev, char *key, int flag)
 }
 
 #ifdef SECURE_MAN_UID
-extern uid_t ruid;
-extern uid_t euid;
-
 /* Must not return DEFINEs set in ~/.manpath. This is used to fetch
  * definitions used in raised-privilege code; if in doubt, be conservative!
  *
@@ -152,7 +153,7 @@ const char *get_def (const char *thing, const char *def)
 {
 	const char *config_def;
 
-	if (ruid == euid)
+	if (!running_setuid ())
 		return get_def_user (thing, def);
 
 	config_def = get_from_list (thing, DEFINE);
