@@ -1,3 +1,8 @@
+Fri Jan  7 23:25:39 GMT 2011  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (make_roff_command): Use running_setuid.
+	* src/manp.c (get_def): Likewise.
+
 Tue Jan  4 11:09:00 GMT 2011  Colin Watson  <cjwatson@debian.org>
 
 	* lib/security.c (running_setuid): New function.
